# llp-lab3

./: .gitignore  CMakeLists.txt  README.md  req_schema.xsd  resp_schema.xsd  rpc_schema.xsd
client/: CMakeLists.txt  ast.cpp  ast.h  evaluate.cpp  evaluate.h  exceptions.h  lexer.cpp  lexer.h  lexer.l  main.cpp  middleware.hpp  network.cpp  network.h  parser.cpp  parser.h  parser.y  response_processor.h
common/: req_schema.cxx  req_schema.hxx  resp_schema.cxx  resp_schema.hxx  rpc_schema.cxx  rpc_schema.hxx
dbms/: .gitignore  CMakeLists.txt  README.md  database  llp-lab1-tests  output.txt
dbms/src/main/file_io/: file_manager.c  file_manager.h  page.c  page.h
dbms/src/main/middleware/: data_type.h  free_list_jumper.c  page_record.c  page_record.h  schema.c  schema.h  table_manager.c  table_manager.h
dbms/src/main/page_cacheing/: cache_manager.c  cache_manager.h
dbms/src/main/user_interface/: database.c  database.h  predicates.c  predicates.h  query.c  query.h  read_scan.h  write_scan.h
dbms/src/main/user_interface/scanners/: join_scanner.c  scanner_declarations.h  scanner_interface.c  scanners.h  select_scanner.c  table_scanner.c
dbms/src/main/util/: comparators.c  comparators.h  linked_list.c  linked_list.h  my_string.c  my_string.h
dbms/src/tests/: main.c  main_test.c  stress_test.c  tests.h
liba/: evaluate.cpp  exceptions.h  main.cpp  middleware.hpp  network.cpp  network.h  response_precessor.cpp
parsemod/: .gitignore  Makefile  README.md  ast.cpp  ast.h  lexer.c  lexer.h  main  main.cpp  parser.c  parser.h  parser.y
parser_lib/: CMakeLists.txt  ast.h  lexer.h  lexer.l  parser.cpp  parser.h  parser.y
server/: enum_resolver.cpp  enum_resolver.h  exceptions.h  main.cpp  network.hpp  response_builder.cpp  response_builder.h  xml_configurer.cpp  xml_configurer.h
test/: client  client.cpp  inner.cxx  inner.hxx  inner.xsd  mine.hpp  outer.xsd  server.cpp  some.xml
